Name:                hadcc
Version:             0.1
Cabal-Version:       >= 1.8
Synopsis:            Haskell DC client with fuse file system interface
Homepage:            https://github.com/f1ori/hadcc
Copyright:           (c) 2011 Florian Richter
License:             GPL
License-file:        LICENSE
Author:              Florian Richter
Maintainer:          Florian Richter <mail@f1ori.de>
Build-Type:          Simple
Stability:           alpha
Data-files:          Hadcc.cfg.example
Extra-source-files:  README


Executable hadcc
  Build-Depends:       base, bzlib, stm, TigerHash, haskell98, bytestring, filepath,
                       directory, mtl, split, network, MissingH, ConfigFile, containers,
                       random, unix, hslogger, deepseq, hadcc, text, regex-compat,
                       hexpat, blaze-builder, HDBC, HDBC-sqlite3
  Main-is:             Hadcc.hs
  Ghc-options:         -threaded
  Other-Modules:       Config, DCCommon, DCToClient, DCToHub, FilelistCache, FilelistCacheTypes,
                       Filelist, FilelistTypes, Filemgmt, FilesystemHandler, Filesystem,
                       FixedQueue, FixedQueueTypes, Hadcc, Tcp, TTH, TTHTypes, Search, Udp
  Extensions:          MultiParamTypeClasses, TypeSynonymInstances, RankNTypes, BangPatterns


Library
  Build-Depends:          base >= 4 && < 5, unix, bytestring
  exposed-Modules:        System.Fuse
  Extensions:             ForeignFunctionInterface ScopedTypeVariables EmptyDataDecls
  Includes:               sys/statfs.h, dirent.h, fuse.h, fcntl.h
  Include-Dirs:           /usr/include, /usr/local/include, .
  Extra-Libraries:        fuse
  Extra-Lib-Dirs:         /usr/local/lib
  CC-Options:             -D_FILE_OFFSET_BITS=64
  if os(darwin) {
    CC-Options:           "-DMACFUSE"
  }

